# Elypso-physics

./: .gitignore  CHANGES.txt  CMakeLists.txt  CMakePresets.json  Linux_prerequisites.txt  README.md  _build_all_linux.sh  _build_all_windows.bat  build_linux_debug.sh  build_linux_release.sh
include/: collider.hpp  gameobjecthandle.hpp  jobsystem.hpp  main.hpp  physicsworld.hpp  rigidbody.hpp
src/: collider.cpp  collisiondetection.cpp  gameobjecthandle.cpp  jobsystem.cpp  main.cpp  physicsworld.cpp  rigidbody.cpp
